--- a/cloud-ops-ui/index.html
+++ b/cloud-ops-ui/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="renderer" content="webkit">
-    <title>云海IOP升级中心</title>
+    <title>中心</title>
     <!-- favicon -->
     <base href="/cloud-ops/">
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
